k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rpg-game
  labels:
    name: rpg-game
    app.kubernetes.io/name: rpg-game
